1. Resolved issue #23 by introducing dynamic positioning: the element gracefully transitions to the left when the corresponding checkbox is unchecked and smoothly moves to the right when checked. Animations have been seamlessly integrated for an enhanced user experience and positioned at the bottom with appropriate alignment. This was resolved in 20 minutes.

--- a/styles/style.css
+++ b/styles/style.css
@@ -115,6 +115,13 @@ h4 {
   .container header .nav-section #menu-toggle:checked ~ .slide-menu .menu-link {
     animation: fadeInMenu 1.6s ease-in-out forwards;
   }
+  .container header .nav-section #menu-toggle:checked ~ .mobile-footer {
+    left: 0;
+    transition: 0.4s ease-in-out;
+  }
+  .container header .nav-section #menu-toggle:checked ~ .mobile-footer .menu-link {
+    animation: fadeInMenu 1.6s ease-in-out forwards;
+  }
   @keyframes fadeInMenu {
     from {
       opacity: 0;
@@ -132,6 +139,12 @@ h4 {
     top: 3.125em;
     transition: 0.5s ease-in-out;
     z-index: -1;
+  }
+  .container header .nav-section #menu-toggle:not(:checked) ~ .mobile-footer {
+    background-color: rgb(221, 219, 219);
+    left: -100%;
+    right: 0;
+    transition: 0.5s ease-in-out;
   }
   .container header .nav-section .hamburger {
     align-self: center;
@@ -241,10 +254,11 @@ h4 {
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
-    width: 100%;
+    width: 85%;
     color: #16181a;
     z-index: -1;
-    justify-content: flex-end;
+    position: fixed;
+    bottom: 0;
   }
   .container header .nav-section .slide-menu .nav-bar-links .mobile-footer .legal-regulations {
     display: flex;
